--- a/web/themes/custom/contribtracker/templates/view/patches_on_issues/views-view-fields--patches_on_issues--page.html.twig
+++ b/web/themes/custom/contribtracker/templates/view/patches_on_issues/views-view-fields--patches_on_issues--page.html.twig
@@ -29,6 +29,7 @@
  * @see template_preprocess_views_view_fields()
  */
 #}
+{% set patches_count = fields.field_code_contrib_patches_count.content|trim  %}
 <div class="contrib__card">
   <div class="contrib__card_date">
     <div class="contrib__card_date__day">
@@ -51,8 +52,8 @@
   </div>
   <div class="contrib__card_patch_file_count—wrapper">
     <div class="contrib__card_patchCount">
-      {{ fields.field_code_contrib_patches_count.content }}
-      {% if fields.field_code_contrib_patches_count.content == 1 %}
+      {{ patches_count }}
+      {% if patches_count == 1 %}
         Patch
       {% else %}
         Patches
