--- a/web/themes/custom/contribtracker/templates/view/patches_on_issues/views-view-fields--patches_on_issues--page.html.twig
+++ b/web/themes/custom/contribtracker/templates/view/patches_on_issues/views-view-fields--patches_on_issues--page.html.twig
@@ -52,12 +52,11 @@
   </div>
   <div class="contrib__card_patch_file_count—wrapper">
     <div class="contrib__card_patchCount">
-      {{ patches_count }}
-      {% if patches_count == 1 %}
-        Patch
-      {% else %}
-        Patches
-      {% endif %}
+      {% trans %}
+        {{ patches_count }} Patch
+      {% plural patches_count %}
+        {{ patches_count }} Patches
+      {% endtrans %}
     </div>
   </div>
 </div>
