--- a/web/themes/custom/contribtracker/templates/misc/status-messages.html.twig
+++ b/web/themes/custom/contribtracker/templates/misc/status-messages.html.twig
@@ -21,7 +21,7 @@
 #}
 <div data-drupal-messages class="status-message-container">
 {% for type, messages in message_list %}
-  <div role="contentinfo" class="status-messages" aria-label="{{ status_headings[type] }}"{{ attributes|without('role', 'aria-label') }}>
+  <div role="alert" class="status-messages" aria-label="{{ status_headings[type] }}"{{ attributes|without('role', 'aria-label') }}>
     {% if type == 'error' %}
       <div role="alert">
     {% endif %}
