--- a/web/themes/custom/contribtracker/scss/global.scss
+++ b/web/themes/custom/contribtracker/scss/global.scss
@@ -1,18 +1,18 @@
-@import 'settings.all';
-@import 'components/base';
-@import 'components/header';
-@import 'components/account-menu';
-@import 'components/main-menu';
-@import 'components/branding';
-@import 'components/button';
-@import 'components/menu';
-@import 'components/footer';
-@import 'components/contribution-details';
-@import 'components/contribution-count';
-@import 'components/page-403';
-@import 'components/form';
-@import 'components/form-contribution-filter';
-@import 'components/tabs';
-@import 'components/pagination';
-@import 'components/contribution-listing';
-@import 'components/status-messages';
+@import 'settings/settings.all';
+@import 'components/utilities/base';
+@import 'components/header/header';
+@import 'components/header/account-menu';
+@import 'components/header/main-menu';
+@import 'components/utilities/branding';
+@import 'components/helpers/button';
+@import 'components/helpers/menu';
+@import 'components/footer/footer';
+@import 'components/pages/contrib-pages/contribution-details';
+@import 'components/pages/contrib-pages/contribution-count';
+@import 'components/pages/error-pages/page-403';
+@import 'components/forms/form';
+@import 'components/forms/form-contribution-filter';
+@import 'components/helpers/tabs';
+@import 'components/utilities/pagination';
+@import 'components/pages/contrib-pages/contribution-listing';
+@import 'components/utilities/status-messages';
