--- a/web/themes/custom/contribtracker/templates/layout/page--404.html.twig
+++ b/web/themes/custom/contribtracker/templates/layout/page--404.html.twig
@@ -25,14 +25,21 @@
 		</div>
 </main>
 
+{% if page.footer_primary or page.footer_secondary %}
+  <footer>
+{% endif %}
+
 {% if page.footer_primary %}
-	<footer role="contentinfo" class="footer-primary">
+	<div class="footer-primary">
 		{{ page.footer_primary }}
-	</footer>
+	</div>
 {% endif %}
 
 {% if page.footer_secondary %}
-	<footer role="contentinfo" class="footer-secondary">
+	<div class="footer-secondary">
 		{{ page.footer_secondary }}
-	</footer>
+	</div>
+{% endif %}
+{% if page.footer_primary or page.footer_secondary %}
+  </footer>
 {% endif %}
