Trim added to fix the error related to variable cast (#354)
* Trim added to fix the error related to variable cast

* fix: twigcs lint errors

---------

Co-authored-by: hw <hussainweb@gmail.com>

--- a/web/themes/custom/contribtracker/templates/view/patches/views-view-fields--patches--page.html.twig
+++ b/web/themes/custom/contribtracker/templates/view/patches/views-view-fields--patches--page.html.twig
@@ -29,6 +29,8 @@
  * @see template_preprocess_views_view_fields()
  */
 #}
+{% set patches_count = fields.field_code_contrib_patches_count.content|trim %}
+{% set files_count = fields.field_code_contrib_files_count.content|trim %}
 <div class="contrib__card">
   <div class="contrib__card_date">
     <div class="contrib__card_date__day">
@@ -51,20 +53,18 @@
   </div>
   <div class="contrib__card_patch_file_count—wrapper">
     <div class="contrib__card_patchCount">
-      {{ fields.field_code_contrib_patches_count.content }}
-      {% if fields.field_code_contrib_patches_count.content == 1 %}
-        Patch
-      {% else %}
-        Patches
-      {% endif %}
+      {% trans %}
+        {{ patches_count }} Patch
+      {% plural patches_count %}
+        {{ patches_count }} Patches
+      {% endtrans %}
     </div>
     <div class="contrib__card_fileCount">
-      {{ fields.field_code_contrib_files_count.content }}
-      {% if fields.field_code_contrib_files_count.content == 1 %}
-          File
-        {% else %}
-          Files
-        {% endif %}
+      {% trans %}
+        {{ files_count }} File
+      {% plural files_count %}
+        {{ files_count }} Files
+      {% endtrans %}
     </div>
   </div>
 </div>
