CONTRIB-005: Add the styles for social auth profiles tab.

--- a/web/themes/custom/contribtracker/scss/global.scss
+++ b/web/themes/custom/contribtracker/scss/global.scss
@@ -16,3 +16,4 @@
 @import 'components/utilities/pagination';
 @import 'components/pages/contrib-pages/contribution-listing';
 @import 'components/utilities/status-messages';
+@import 'components/blocks/social-profiles';
