--- a/web/themes/custom/contribtracker/scss/config/_colors.scss
+++ b/web/themes/custom/contribtracker/scss/config/_colors.scss
@@ -30,4 +30,6 @@
   --c-iridescent-green: #40c463;
   --c-kelly-green: #30a14e;
   --c-berry-green: #216e39;
+  --c-light-grey: #e8e8e8;
+  --c-white-smoke: #f8f8f8;
 }
