--- a/web/themes/custom/contribtracker/scss/components/blocks/graph/contrib-graph.scss
+++ b/web/themes/custom/contribtracker/scss/components/blocks/graph/contrib-graph.scss
@@ -11,7 +11,8 @@
   border-radius: 0;
 
   &--wrapper {
-    display: block;
+    display: flex;
+    justify-content: center;
     padding: 0;
     border: 1px solid var(--c-light-silver);
     margin: 0;
@@ -19,6 +20,7 @@
     padding: 12px;
     border-top-left-radius: 6px;
     border-top-right-radius: 6px;
+    background-color: var(--c-white);
   }
 
   ul,
@@ -37,7 +39,7 @@
     margin-top: 0;
 
     ol {
-      padding-left: 36px;
+      padding-left: 0;
     }
 
     .bold {
@@ -109,14 +111,13 @@
 
   /*** day of week heading ** */
   &--week {
-    width: 15px;
-    position: absolute;
-    left: -28px;
     top: 30px;
     font-size: 0.75rem;
+    text-align: left;
+    padding: 16px 23px 16px 0;
 
     li:nth-child(2) {
-      margin: 14px 0;
+      margin: 18px 0;
     }
   }
 
@@ -128,16 +129,17 @@
 
   /*** activity-chart--month headings ** */
   &--month ol {
-    display: flex;
+    display: inline-flex;
     padding: 0;
     margin: 0;
+    padding-left: 46px;
 
     li {
-      margin-left: 44px;
+      margin-left: 53px;
       font-size: 0.75rem;
 
       &:nth-child(1) {
-        margin-left: 30px;
+        margin-left: 0;
       }
     }
   }
@@ -156,6 +158,7 @@
     position: relative;
     display: flex;
     align-items: center;
+    justify-content: flex-end;
     gap: 14px;
     margin-top: 30px;
     font-size: 0.75rem;
@@ -234,5 +237,61 @@
         border-top-left-radius: 50px;
       }
     }
+  }
+}
+
+.activity-chart__content {
+  display: inline-flex;
+}
+
+/* Graph content wrapper styles. */
+.contribution-graph__content {
+  display: inline-flex;
+  flex-direction: column;
+  margin: 0 auto;
+  padding: 40px 90px;
+
+  &-wrapper {
+    overflow: auto;
+  }
+}
+
+/* Skeleton styles. */
+.skeleton {
+  &__wrapper {
+    min-width: 896px;
+    margin-bottom: 13px;
+
+    &--multiple {
+      .skeleton__placeholder {
+        margin-bottom: 5px;
+      }
+    }
+  }
+
+  &__placeholder {
+    background: linear-gradient(
+      90deg,
+      var(--c-light-grey) 0px,
+      var(--c-white-smoke) 40px,
+      var(--c-light-grey) 80px
+    );
+    background-size: 960px;
+    width: 100%;
+    height: 14px;
+    border-radius: 3px;
+    margin: 0;
+    animation: animation 2s infinite;
+  }
+}
+
+@keyframes animation {
+  0% {
+    background-position: 0px;
+  }
+
+  40%,
+  100% {
+    background-position: 920px;
   }
 }
