feat: Contribution Graph (#503)
Co-authored-by: Gaurav Mahlawat <gaurav.mahlawat@axelerant.com>
Co-authored-by: Murtaza Alvi <syed.murtaza1@alshaya.com>
Co-authored-by: zeshanziya <zeshan.ziya@axelerant.com>

--- a/web/themes/custom/contribtracker/scss/config/_colors.scss
+++ b/web/themes/custom/contribtracker/scss/config/_colors.scss
@@ -22,4 +22,14 @@
   --c-webinar: #ff8d23;
   --c-border: #858080;
   --c-hover: #ececec;
+  --c-blue-light: #ebedf0;
+  --c-light-silver: #d0d7de;
+  --c-navy-dark: #24292f;
+  --c-bright-gray: #ebedf0;
+  --c-teal-green: #9be9a8;
+  --c-iridescent-green: #40c463;
+  --c-kelly-green: #30a14e;
+  --c-berry-green: #216e39;
+  --c-light-grey: #e8e8e8;
+  --c-white-smoke: #f8f8f8;
 }
