fix: issues related to upgrading to Drupal 11

--- a/web/themes/custom/contribtracker/templates/block/block--contribgraph.html.twig
+++ b/web/themes/custom/contribtracker/templates/block/block--contribgraph.html.twig
@@ -26,7 +26,7 @@
               <li class="btn--tooltip" data-title="{{ '1 Contributions'|t }}" data-activity='1'></li>
               <li class="btn--tooltip" data-title="{{ '2 Contributions'|t }}" data-activity='2'></li>
               <li class="btn--tooltip" data-title="{{ '3 Contributions'|t }}" data-activity='3'></li>
-              <li class="btn--tooltip" data-title="{{ '4+ Contributions't }}" data-activity='4'></li>
+              <li class="btn--tooltip" data-title="{{ '4+ Contributions'|t }}" data-activity='4'></li>
           </ul>
           <span>{{ 'More'|t }}</span>
         </div>
