Fixing eslint ignore issue

--- a/web/themes/custom/contribtracker/scss/global.scss
+++ b/web/themes/custom/contribtracker/scss/global.scss
@@ -1,19 +1,19 @@
-@import 'settings/settings.all';
-@import 'components/utilities/base';
-@import 'components/header/header';
-@import 'components/header/account-menu';
-@import 'components/header/main-menu';
-@import 'components/utilities/branding';
-@import 'components/helpers/button';
-@import 'components/helpers/menu';
-@import 'components/footer/footer';
-@import 'components/pages/contrib-pages/contribution-details';
-@import 'components/pages/contrib-pages/contribution-count';
-@import 'components/pages/error-pages/page-403';
-@import 'components/forms/form';
-@import 'components/forms/form-contribution-filter';
-@import 'components/helpers/tabs';
-@import 'components/utilities/pagination';
-@import 'components/pages/contrib-pages/contribution-listing';
-@import 'components/utilities/status-messages';
-@import 'components/blocks/social-profiles';
+@use 'settings/settings.all';
+@use 'components/utilities/base';
+@use 'components/header/header';
+@use 'components/header/account-menu';
+@use 'components/header/main-menu';
+@use 'components/utilities/branding';
+@use 'components/helpers/button';
+@use 'components/helpers/menu';
+@use 'components/footer/footer';
+@use 'components/pages/contrib-pages/contribution-details';
+@use 'components/pages/contrib-pages/contribution-count';
+@use 'components/pages/error-pages/page-403';
+@use 'components/forms/form';
+@use 'components/forms/form-contribution-filter';
+@use 'components/helpers/tabs';
+@use 'components/utilities/pagination';
+@use 'components/pages/contrib-pages/contribution-listing';
+@use 'components/utilities/status-messages';
+@use 'components/blocks/social-profiles';
