--- a/web/themes/custom/contribtracker/scss/settings/_settings.all.scss
+++ b/web/themes/custom/contribtracker/scss/settings/_settings.all.scss
@@ -1,9 +1,9 @@
-@import 'config/plugins';
-@import 'config/breakpoints';
-@import 'config/colors';
-@import 'config/fonts';
-@import 'config/icons';
-@import 'config/grid';
-@import 'config/z-index';
-@import 'config/mixins';
-@import 'config/headings';
+@use 'config/plugins';
+@use 'config/breakpoints';
+@use 'config/colors';
+@use 'config/fonts';
+@use 'config/icons';
+@use 'config/grid';
+@use 'config/z-index';
+@use 'config/mixins';
+@use 'config/headings';
